Bug fixes
- Error corrections to pass the W3 validator.
- Limited the width of the home page grid to avoid too long loading times of images.
- Changed the dates of one of the expositions to have at least one exposition with the label “Coming soon”.

--- a/galeriaArteAPP/static/css/base.css
+++ b/galeriaArteAPP/static/css/base.css
@@ -295,32 +295,13 @@ footer p {
 
     .simple-header nav ul {
         flex-direction: column;
-        align-items: left;
+        align-items: flex-start;
         padding-left: 20px;
         gap: 0.4rem
     }
 
     .simple-header nav ul li a{
         padding: 0 1rem;
-    }
-}
-
-@media (max-width:100%) {
-
-    .container {
-        padding-inline: 1.25rem
-    }
-
-    .flex {
-        flex-direction: column
-    }
-
-    .heading-l {
-        font: 900 2.5rem/2.75rem 'Big Shoulders Display', sans-serif
-    }
-
-    .heading-s {
-        font: 900 1.75rem/1.875rem 'Big Shoulders Display', sans-serif
     }
 }
 
